--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'1.4.0.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version:'1.5.1.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.4.0.RELEASE'
+	compile group: 'org.springframework.session', name: 'spring-session', version:'1.3.0.RELEASE'
 	compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version:'1.9.21'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version:'1.4.0.RELEASE'
 	compile group: 'org.hibernate', name: 'hibernate-core', version:'5.0.4.Final'
