change pilot project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
 
+r2r.android.client.id = r2r-web-app
+r2r.android.client.secret = 22198307
+
+r2r.ios.client.id = r2r-web-app
+r2r.ios.client.secret = 22198307
+
+r2r.web.client.id = r2r-web-app
+r2r.web.client.secret = 22198307
+
