refix spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,27 @@ spring.datasource.password=postgres
 
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults:false
 
 spring.datasource.platform=postgres
-
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.continue-on-error=true
+spring.datasource.initialize=false
+spring.datasource.initial-size=0
+spring.datasource.time-between-eviction-runs-millis=5000
+spring.datasource.min-evictable-idle-time-millis=5000
+spring.datasource.min-idle=0
 
 spring.thymeleaf.mode=LEGACYHTML5
-#spring.thymeleaf.cache=false
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/site-v3/
+spring.thymeleaf.suffix=.html
+
+spring.resources.static-locations=classpath:/site-v3/assets/
 
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
