--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.datasource.platform=postgres
 spring.jpa.hibernate.ddl-auto=none
 
 spring.thymeleaf.mode=LEGACYHTML5
-#spring.thymeleaf.cache=false
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
 
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
