--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version:'2.0.7.RELEASE'
 	compile group: 'com.github.darrachequesne', name: 'spring-data-jpa-datatables', version:'1.2'
 	compile 'com.github.mkopylec:recaptcha-spring-boot-starter:1.3.10'
+	compile group: 'com.google.guava', name: 'guava', version:'18.0'
 
 	compile('org.projectlombok:lombok:1.16.10')
 
