add trip facilities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:postgresql://35.187.248.186:5432/road2ring
+#spring.datasource.url=jdbc:postgresql://localhost:5432/road2ring
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
