--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'1.4.0.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version:'1.5.1.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.4.0.RELEASE'
-//	compile group: 'org.springframework.session', name: 'spring-session', version:'1.3.0.RELEASE'
+	compile group: 'org.springframework.session', name: 'spring-session', version:'1.3.0.RELEASE'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.4'
 	compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version:'1.9.21'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version:'1.4.0.RELEASE'
@@ -48,6 +48,9 @@ dependencies {
 	compile group: 'com.google.guava', name: 'guava', version:'18.0'
 
 	compile('org.projectlombok:lombok:1.16.10')
+
+	compile ('com.github.javafaker:javafaker:0.14') { exclude module: 'org.yaml' }
+	compile group: 'org.yaml', name: 'snakeyaml', version: '1.18'
 
 	compile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.4.0.RELEASE') {
 		exclude(module: 'commons-logging')
