--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:postgresql://35.187.248.186:5432/road2ring
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+server.port=8080
+
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
