--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=postgres
 
 server.port=8080
 
+cors.allowed-origins=http://localhost:3000,http://10.183.14.164:3000,http://10.183.14.164
+
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
