--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://35.187.248.186:5432/road2ring
-#spring.datasource.url=jdbc:postgresql://localhost:5432/road2ring
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://128.199.174.90:5432/road2ring-master
+#spring.datasource.url=jdbc:postgresql://localhost:5432/road2ring-master
+spring.datasource.username=dev
 spring.datasource.password=postgres
 
 server.port=8080
